bridge/base/0-freelance-pay-namespace.yaml
#! 0-freelance-pay-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: freelance-pay
    labels:
        com.docker.compose.project: freelance-pay
