bridge/base/app-deployment.yaml
#! app-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app
    namespace: freelance-pay
    labels:
        com.docker.compose.project: freelance-pay
        com.docker.compose.service: app
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: freelance-pay
            com.docker.compose.service: app
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: freelance-pay
                com.docker.compose.service: app
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: Always
            containers:
                - name: app
                  image: freelance-pay:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: app-5000
                      containerPort: 5000
                    - name: app-5173
                      containerPort: 5173
                  volumeMounts:
                    - name: app-server-data
                      mountPath: /app/server/data
            volumes:
                - name: app-server-data
                  hostPath:
                    path: C:\Users\hp\.gemini\antigravity\scratch\freelance-pay\server\data
