bridge/base/app-expose.yaml
#! app-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: app
    namespace: freelance-pay
    labels:
        com.docker.compose.project: freelance-pay
        com.docker.compose.service: app
spec:
    selector:
        com.docker.compose.project: freelance-pay
        com.docker.compose.service: app
    ports:
        - name: app-5175
          port: 5175
          targetPort: 5175
