bridge/base/app-service.yaml
# check if there is at least one published port

#! app-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: app-published
    namespace: freelance-pay
    labels:
        com.docker.compose.project: freelance-pay
        com.docker.compose.service: app
spec:
    selector:
        com.docker.compose.project: freelance-pay
        com.docker.compose.service: app
    ports:
        - name: app-5173
          port: 5173
          protocol: TCP
          targetPort: app-5173
        - name: app-5000
          port: 5000
          protocol: TCP
          targetPort: app-5000
